Make sure video does not get scrollbar. [HFJ-1125]

--- a/styles/cp.css
+++ b/styles/cp.css
@@ -630,14 +630,15 @@ border-collapse: collapse;
   padding: 0;
 }
 
-.h5p-course-presentation .h5p-element .h5p-element-inner.h5p-ct {
-  overflow-y: hidden;
-}
-
 .h5p-course-presentation .h5p-element .h5p-element-inner:not(.h5p-interactive-video) {
   overflow: hidden;
   overflow-y: auto;
   background: transparent;
+}
+
+.h5p-course-presentation .h5p-element .h5p-element-inner.h5p-ct,
+.h5p-course-presentation .h5p-element .h5p-element-inner.h5p-video {
+  overflow-y: hidden;
 }
 
 .h5p-course-presentation .h5p-element .h5p-element-inner.h5p-advanced-text,
